--- a/master.html
+++ b/master.html
@@ -8,7 +8,7 @@
 
     <p>You have dicided to walk around the Craft area. And how many steps it takes to get from on place to another.</p>
 
-    <a href="start.html">start</a>
+    <a href="index.html">start</a>
     <p> Master Path Way</p>
     <br>
     <a href="arnys.html">Arny's</a>
