--- a/master.html
+++ b/master.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Craft area </h1>
 
-    <p>You have dicided to walk around the Craft area. And how many steps it takes to get from on place to another.</p>
+    <p>You have decided to walk around the Craft area. And how many steps it takes to get from one place to another.</p>
 
     <a href="index.html">start</a>
     <p> Master Path Way</p>
