--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
     <a href="classroom.html">ClassRoom</a>
     <br>
-     <a id="hidden" href="index.html">hidden</a>
+     <a id="hidden" href="master.html">hidden</a>
   </body>
 </html>
